--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             <img src="air-conditioner.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span> Window Air Conditioner </span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span> Window shade</span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4> GOOGLE LENS is more accurate </h4>
               </div>
 
     </div>
@@ -51,19 +51,19 @@
             <img src="bottle.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span> Milton Pro Water Bottle </span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span> Bottle  </span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4> Both, GOOGLE LENS and MOBILE NET were accurate this time.</h4>
               </div>
 
     </div>
@@ -74,19 +74,19 @@
             <img src="hanger.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span> Iron Decorative Piece </span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span> Shower Curtain</span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4>  None of them were correct this time</h4>
               </div>
 
     </div>
@@ -97,19 +97,19 @@
             <img src="headphones.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span> Safety Glasses </span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span> Stethoscope</span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4> None of them wre correct this time. </h4>
               </div>
 
     </div>
@@ -120,19 +120,19 @@
             <img src="mug.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span> Freinds Forever cup</span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span> handle </span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4> GOOGLE LENS was more accurate.</h4>
               </div>
 
     </div>
@@ -143,19 +143,19 @@
             <img src="pencil.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span> pencil </span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span> pencil</span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4> Both were correct this time</h4>
               </div>
 
     </div>
@@ -166,19 +166,19 @@
             <img src="scissors.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span>  Scissors </span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span> lighter </span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4> GOOGLE LENS is more accurate. </h4>
               </div>
 
     </div>
@@ -189,19 +189,19 @@
             <img src="spoon.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span> fork </span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span> spoon </span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4> MOBILE NET was more accurate.</h4>
               </div>
 
     </div>
@@ -212,23 +212,25 @@
             <img src="switch-board.jpg" class="img-responsive"> 
         </li>
         <h5 class="col-sm-4 col-xs-12">
-            Output on <b> GOOGLE LENS</b>
-            <span> </span>
+            Output on <b> GOOGLE LENS-</b>
+            <span> Switch board</span>
         </h5>
 
         <h5 class="col-sm-4 col-xs-12"> 
-            Output on <b> MOBILE NET</b>
-            <span> </span>
+            Output on <b> MOBILE NET-</b>
+            <span>  switch</span>
               </h5>
 
               <div class="mini_result" class="col-xs-12"> 
                   <h4>Result-</h4>
                   <hr>
-                  <h4> </h4>
+                  <h4> GOOGLE LENS was more accurate this time.</h4>
               </div>
 
     </div>
 </ol>
+
+<p id="conclusion"> I have tested 10 images. GOOGLE LENS identified 6 of them and MOBILE NET identified 3 of them. So, according to this Case Study, GOOGLE LENS was more accurate. </p>
 
   
   
